--- a/build.gradle
+++ b/build.gradle
@@ -695,7 +695,7 @@ task distributionZip (type: Zip , dependsOn: [
 ]) {
   group = 'Publishing'
   description = 'Assemble a zip file with jar files and user documentation'
-  def dirName = "${base.archivesBaseName}-${version}"
+  def dirName = "${base.archivesName}-${version}"
   from 'build/libs/'
   from ('src/docs/manual/index.html') {
     into 'doc/manual'
